fix status badge alignment

--- a/meal-ui/src/styles/local/partials/2-components/recipe-form-card/recipe-form-card.css
+++ b/meal-ui/src/styles/local/partials/2-components/recipe-form-card/recipe-form-card.css
@@ -2,3 +2,7 @@
 	--card-height: 1200px;
 	background-color: var(--dove-grey);
 }
+
+.e-recipe-form .image-slot {
+	position: relative;
+}
